manifests/platform/grafana/overlays/okd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    argocd.argoproj.io/sync-wave: "4"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: openshift-default
  rules:
  - host: grafana.apps.okd.jenniferpweir.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: grafana-service
            port:
              number: 3000
